# yak-sdl

./: .gitignore  CMakeLists.txt
include/: yak.h  yak.hpp
include/yak/: common.h  entity.h  game.h  game.hpp  gameobject.hpp
include/yak/components/: animation.hpp  component.h  component.hpp
include/yak/components/graphics/: sprite.h
include/yak/internal/: renderer.h  transform.hpp  vector2d.hpp
include/yak/managers/: texture.h  texture.hpp
src/: entity.cpp  game.cpp  gameobject.cpp
src/components/: animation.cpp  component.cpp
src/components/graphics/: sprite.cpp
src/internal/: renderer.cpp
src/managers/: texture.cpp
